--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="Mulberry Beauty-quiz">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://medieinstitutet.github.io/fed24d-js-intro-inl-2-quiz-mulberry-beauty/">
+    <meta property="og:url" content="https://jhellberg04.github.io/world-quiz/">
     <meta property="og:description" content="Utmana dina geografikunskaper med frågor om huvudstäder, landmärken och kulturer. Hur många rätt kan du få?">
     <meta property="og:image" content="https://">
     <meta property="og:site_name" content="Mulberry Beauty">
